--- a/TodoAppHexagon.Core/TodoAppHexagon.Core.csproj
+++ b/TodoAppHexagon.Core/TodoAppHexagon.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CQRS\Commands\NewFolder\" />
+  </ItemGroup>
+
 </Project>
